# vncserver

./: CMakeLists.txt  README.md  esa-vnc-server.pro
src/: esa-vnc-server.c  keyboard.c  keyboard.h  logging.h  mouse.c  mouse.h  touch.c  touch.h
yocto/: esa-vnc-server_git.bb
